[package]
name = "tls-proxy-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
flexi_logger = "0.17"
log = "0.4.14"
http = "0.2.8"
tokio-rustls = { version = "0.23.4" }
tokio-tls-helper = { version = "0.2.0" }
fdlimit = "0.2.1"